# clipperp

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  README.md  build_container  run_container  run_tests
bindings/matlab/: CMakeLists.txt  clipperplus_clique_mex.cpp  clique_corenumber_mex.cpp  clique_optimization_mex.cpp  mexutils.h  pmc_heuristic_mex.cpp
bindings/python/: CMakeLists.txt  py_clipper.cpp  py_clipperplus.cpp  setup.py.in  trampolines.h  wrapper.h
examples/: README.md  demo_clipperp.m  demo_pointcloud_regist.m
examples/data/: place_datasets_here.txt
examples/helpers/: affinity_matrix.m  arun.m
examples/python/: demo_clipperp.py  demo_pointcloud_register.py
include/clipper/: clipper.h  dsd.h  maxclique.h  types.h  utils.h
include/clipper/invariants/: abstract.h  euclidean_distance.h  pointnormal_distance.h
include/clipperplus/: clipperplus_clique.h  clipperplus_graph.h  clipperplus_heuristic.h  clique_corenumber.h  clique_optimization.h  debug.h  utils.h
include/pmc/: pmc.h  pmc_debug_utils.h  pmc_graph.h  pmc_headers.h  pmc_heu.h  pmc_heuristic.h  pmc_input.h  pmc_neigh_coloring.h  pmc_neigh_cores.h  pmc_utils.h  pmc_vertex.h
src/: clipperplus_clique.cpp  clipperplus_graph.cpp  clipperplus_heuristic.cpp  clique_corenumber.cpp  clique_optimization.cpp  utils.cpp
test/: CMakeLists.txt  clipperplus_test.cpp
test/cpp_tests/: CMakeLists.txt
test/cpp_tests/unit/: clipperplus_test.cpp  test_clipperplus_clique.cpp  test_clique_corenumber.cpp  test_utils.cpp
test/matlab/: DIMACS9.mat  test_clique.m  test_dimacs.m
test/python/: ex0_test.ipynb  ex4_bunny.ipynb
